# openmeet

./: .env.dev  .gitignore  Distributed Meetup Platform.md  Dockerfile  OpenMeet Business Plan.md  README.md  docker-compose.yml  package-lock.json
ansible/: README.md  delete_droplet.yaml  install_cassandra.yaml  install_cassandra_certs.yaml  raise_cassandra_node.yaml  raise_droplet.yaml  remove_cassandra_node.yaml
ansible/inventories/dev/: hosts
ansible/inventories/dev/group_vars/: cassandra.yaml
ansible/inventory/: main.yaml
ansible/playbooks/: main.yaml
ansible/templates/: cassandra.yaml.j2
api/: Cargo.toml  Dockerfile  Rocket.toml
api/src/: cassandra_pool.rs  events.rs  main.rs  middleware.rs  user.rs  users.rs
api/src/middleware/: auth.rs
database/: DataDefinitions.md  cassandra copy.yaml  cassandra.yaml  schema.cql  schema.transition.v1.v2.cql  schema.v2.cql
frontend/: app.vue  eslint.config.cjs  nuxt.config.ts  package-lock.json  package.json
frontend/assets/css/: main.css
frontend/components/: LoginComponent.vue  RegisterComponent.vue
frontend/pages/: CreateEvent.vue  Login.vue  Logout.vue  ManageUsers.vue  Register.vue  index.vue  login.vue  logout.vue  manageUsers.vue  register.vue
frontend/server/api/: login.test.ts  login.ts  register_user.ts  users.ts
frontend/server/middleware/: auth.ts.X
frontend/server/utils/: cassandra.ts
old/: eslint.config.cjs  fly.toml  package.json
old/src-tauri/src/: event.rs  main.rs  user.rs
old/src/components/: UsersList.vue
old/src/pages/: Logout.vue
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  commands.rs.couchdb  event.rs  main.rs  user.rs
src/pages/: AuthenticatedPage.vue  Login.vue  UnauthenticatedPage.vue
(+14 files in other folders)
