[package]
name = "api"
version = "0.1.0"
edition = "2021"



[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }



[dependencies]

bcrypt = "0.13"
cassandra-cpp = "3.0.2"
chrono = { version = "0.4",  features = ["serde"] }
jsonwebtoken = "8.1"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }

[dependencies.regex]
version = "1.3"
default-features = false
# Unless you have a specific reason not to, it's good sense to enable standard
# library support. It enables several optimizations and avoids spin locks. It
# also shouldn't meaningfully impact compile times or binary size.
features = ["std", "unicode-perl"]