[package]
name = "openmeet"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }

[dependencies]
chrono = { version = "0.4",  features = ["serde"]}
cassandra-cpp = "3.0.2"
env_logger = "0.9"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1", features = ["shell-open"] }
uuid = { version = "1.3", features = ["v4", "serde"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
